# fluxopt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  GUIDE_MIGRATION_PLAN.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: dependabot.yml  release.yml
.github/workflows/: benchmark-hint.yaml  benchmarks.yaml  ci.yaml  dependabot-auto-merge.yaml  docs.yaml  label-from-title.yaml  pr-title.yaml  publish.yaml  release.yaml
0.0.3-alpha.0/: 404.html  index.html  objects.inv
0.0.3-alpha.0/guide/getting-started/: index.html
0.0.3-alpha.0/guide/status/: index.html
0.0.3-alpha.0/guide/storage/: index.html
0.0.3-alpha.0/math/carrier-balance/: index.html
0.0.3-alpha.0/math/converters/: index.html
0.0.3-alpha.0/math/effects/: index.html
0.0.3-alpha.0/math/objective/: index.html
0.0.3-alpha.0/math/sizing/: index.html
0.0.3-alpha.0/math/status/: index.html
0.0.3-alpha.0/math/storage/: index.html
0.0.3-alpha.0/notebooks/01-quickstart/: index.html
0.0.3-alpha.0/notebooks/02-heat-system/: index.html
0.0.3-alpha.0/notebooks/03-multi-node-heat/: index.html
0.0.3-alpha.0/search/: search_index.json
benchmark/: README.md  pyproject.toml  systems.py  test_build.py  test_io.py  test_reference.py
dev/: 404.html  index.html  objects.inv
dev/api/SUMMARY/: index.html
dev/api/fluxopt/: index.html
dev/api/fluxopt/components/: index.html
dev/api/fluxopt/constraints/: index.html
dev/api/fluxopt/constraints/sparse/: index.html
dev/api/fluxopt/constraints/status/: index.html
dev/api/fluxopt/constraints/storage/: index.html
dev/api/fluxopt/contributions/: index.html
dev/api/fluxopt/elements/: index.html
dev/api/fluxopt/model/: index.html
dev/api/fluxopt/model_data/: index.html
dev/api/fluxopt/results/: index.html
dev/api/fluxopt/stats/: index.html
dev/api/fluxopt/types/: index.html
dev/changelog/: index.html
dev/guide/converters/: index.html
dev/guide/effects/: index.html
dev/guide/flows/: index.html
dev/guide/getting-started/: index.html
dev/guide/sizing/: index.html
dev/guide/status/: index.html
dev/guide/storage/: index.html
dev/math/bus-balance/: index.html
dev/math/carrier-balance/: index.html
dev/math/converters/: index.html
dev/math/effects/: index.html
dev/math/flows/: index.html
dev/math/notation/: index.html
dev/math/objective/: index.html
dev/math/sizing/: index.html
dev/math/status/: index.html
dev/math/storage/: index.html
dev/notebooks/01-quickstart/: 01-quickstart.ipynb  index.html
dev/notebooks/02-heat-system/: 02-heat-system.ipynb  index.html
dev/notebooks/03-multi-node-heat/: index.html
dev/notebooks/04-multi-period/: index.html
dev/notebooks/05-investment/: index.html
dev/search/: search_index.json
docs/: benchmark.md  contributing.md  index.md
docs/design/: config-and-pydantic-direction.md  model-data-tree.md  naming-grammar.md  pypsa-core-integration.md  time-index.md
docs/guide/: converters.md  effects.md  flows.md  getting-started.md  sizing.md  status.md  storage.md
docs/javascripts/: mathjax.js  notebook-download.js  notebook-prompts.js
docs/math/: bus-balance.md  carrier-balance.md  converters.md  effects.md  flows.md  notation.md  objective.md  sizing.md  status.md  storage.md
docs/notebooks/: 01-quickstart.ipynb  02-heat-system.ipynb  02-storage.ipynb  03-multi-node-heat.ipynb  03-status.ipynb  04-multi-period.ipynb  04-piecewise.ipynb  04-sizing.ipynb  05-effects.ipynb  05-investment.ipynb  05-multi-period.ipynb  05-sizing.ipynb  06-multi-period.ipynb  06-piecewise.ipynb  06-sizing.ipynb  06-status.ipynb  07-multi-period.ipynb  07-piecewise.ipynb  08-investment.ipynb
docs/notebooks/examples/: heat-system.ipynb  investment.ipynb  multi-node-heat.ipynb
docs/stylesheets/: extra.css
scripts/: benchmark_comment.py  gen_ref_pages.py
src/fluxopt/: __init__.py  benchmark.py  components.py  contract.py  contributions.py  effect_terms.py  elements.py  flow_system.py  model.py  model_data.py  results.py  schema.py  stats.py  types.py  validation.py
src/fluxopt/constraints/: __init__.py  episodes.py  status.py  storage.py
tests/: conftest.py  test_benchmark.py  test_data.py  test_doc_anchors.py  test_episodes.py  test_flow_system.py  test_flow_system_validation.py  test_io.py  test_result_topology.py  test_roundtrip.py  test_schema.py  test_stats.py  test_stats_summary.py  test_types.py
tests/math/: test_bus_balance.py  test_contributions.py  test_converter.py  test_custom.py  test_doc_formulas.py  test_effects.py  test_end_to_end.py  test_math.py  test_sizing.py  test_stats.py  test_status.py  test_storage.py
tests/math_port/: conftest.py  test_bus.py  test_clustering.py  test_combinations.py  test_components.py  test_conversion.py  test_effects.py  test_flat_time.py  test_flow.py  test_flow_invest.py  test_flow_status.py  test_multi_period.py  test_piecewise.py  test_scenarios.py  test_storage.py  test_storage_status.py
