[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fluxopt"
dynamic = ["version"]
description = "Energy system optimization with linopy — progressive modeling, from simple to complex."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Felix Bumann", email = "felixbumann387@gmail.com" },
]
maintainers = [
    { name = "Felix Bumann", email = "felixbumann387@gmail.com" },
]
keywords = ["optimization", "energy systems", "linopy", "linear programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "highspy>=1.13.1,!=1.14.0",  # 1.14.0 has MIP presolve bug (ERGO-Code/HiGHS#2975)
    "linopy>=0.7.0",
    "netcdf4>=1.6.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "xarray>=2024.1.0",
]

[project.urls]
repository = "https://github.com/FBumann/fluxopt"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/fluxopt"]

[tool.hatch.build.targets.sdist]
include = ["src/fluxopt/", "LICENSE", "README.md"]

[dependency-groups]
dev = [
    "pandas-stubs==3.0.0.260204",
    "pre-commit==4.6.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "ruff==0.15.12",
    "ty==0.0.36",
]
docs = [
    "plotly>=6",
    "markdown-include==0.8.1",
    "mike==2.2.0",
    "mkdocs==1.6.1",
    "mkdocs-gen-files==0.6.1",
    "mkdocs-git-revision-date-localized-plugin==1.5.1",
    "mkdocs-include-markdown-plugin==7.2.2",
    "mkdocs-jupyter==0.26.3",
    "mkdocs-literate-nav==0.6.3",
    "mkdocs-material==9.7.6",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-plotly-plugin==0.1.3",
    "mkdocs-table-reader-plugin==3.1.0",
    "mkdocstrings-python==2.0.3",
    "notebook==7.5.5",
    "pygments==2.20.0",
    "pymdown-extensions==10.21.2",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "B",     # flake8-bugbear
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "FA",    # flake8-future-annotations
    "TC",    # flake8-type-checking
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
    "PERF",  # perflint
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "RET",   # flake8-return
    "FLY",   # flynt (f-string)
    "FURB",  # refurb
    "T20",   # flake8-print
    "PLC",   # pylint conventions
    "PLE",   # pylint errors
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "RET504",   # unnecessary assignment before return
    "PLC0415",  # import not at top level (used for circular import avoidance)
]
extend-fixable = ["B", "SIM", "RUF", "C4", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"scripts/**/*.py" = ["T201", "RUF003"]
"docs/notebooks/*.ipynb" = ["T201", "RUF001", "RUF003"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
ambiguous-protocol-member = "error"
deprecated = "error"
division-by-zero = "error"
ignore-comment-unknown-rule = "error"
ineffective-final = "error"
invalid-enum-member-annotation = "error"
invalid-ignore-comment = "error"
invalid-legacy-positional-parameter = "error"
invalid-named-tuple-override = "error"

[tool.pytest.ini_options]
addopts = "-n auto"
pythonpath = ["tests"]
markers = [
    "slow: marks tests as slow",
]
