# Standalone project so the benchmark environment is the ONE thing in this repo
# that pins its dependencies (committed benchmark/uv.lock, `uv sync --frozen`).
# The repo root keeps regular, unpinned resolution. A pinned bench env keeps the
# CodSpeed dashboard tracking fluxopt's code, not upstream dependency releases;
# Dependabot bumps this lock monthly (.github/dependabot.yml).
[project]
name = "fluxopt-benchmarks"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "fluxopt",
    "pytest==9.1.1",
    "pytest-codspeed==5.0.3",
    "pytest-benchmem[plot]==0.4.10",
]

[tool.uv]
package = false

[tool.uv.sources]
fluxopt = { path = "..", editable = true }

[tool.pytest.ini_options]
# Own rootdir: no -n auto (no xdist here), and benchmark/ on the path for `systems`.
addopts = ""
pythonpath = ["."]
